Projet_GL/src/test/deca/context/valid/unprovided/readFloat.deca
// Description:
//    Appel d'un readFloat
//
// Resultat:
//    En fonction de la valeur entrée
//
// Historique:
//    Créé le 24/01/2018

{
     float a = readFloat();
}
	